# BETTA-HA-PANEL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/webui/: CMakeLists.txt  webui_dummy.c
components/webui/www/: app.js  index.html  styles.css
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  app_events.c  app_events.h  app_main.c  idf_component.yml
main/api/: api_entities.c  api_i18n.c  api_layout.c  api_routes.c  api_routes.h  api_screenshot.c  api_settings.c  api_state.c  api_wifi.c  http_guard.c  http_guard.h  http_server.c  http_server.h
main/drivers/: board_pins.h  display_init.c  display_init.h  touch_init.c  touch_init.h
main/ha/: ha_client.c  ha_client.h  ha_model.c  ha_model.h  ha_services.h  ha_ws.c  ha_ws.h
main/layout/: layout_schema.h  layout_store.c  layout_store.h  layout_validate.c  layout_validate.h
main/net/: time_sync.c  time_sync.h  wifi_mgr.c  wifi_mgr.h
main/settings/: i18n_store.c  i18n_store.h  runtime_settings.c  runtime_settings.h
main/ui/: ui_bindings.c  ui_bindings.h  ui_boot_splash.c  ui_boot_splash.h  ui_i18n.c  ui_i18n.h  ui_pages.c  ui_pages.h  ui_runtime.c  ui_runtime.h  ui_widget_factory.c  ui_widget_factory.h
main/ui/assets/: README.md  SMART86OS_Betta.c
main/ui/fonts/: README.md  app_text_fonts.h  mdi_font_registry.c  mdi_font_registry.h  mditop50icons42.c  mdiweatherIcons120.c
main/ui/theme/: theme_default.c  theme_default.h
main/ui/weather_icons/: UPSTREAM_LINK.txt
main/ui/widgets/: w_button.c  w_empty_tile.c  w_graph.c  w_heating_tile.c  w_light_tile.c  w_sensor.c  w_slider.c  w_weather_tile.c
main/util/: json_util.c  json_util.h  log_tags.h  ringbuf.c
release/: README.md
src/: sdkconfig.old
src/main/: Kconfig.projbuild  app_events.c
src/main/api/: api_entities.c  api_state.c  api_wifi.c  http_guard.h  http_server.h
src/main/drivers/: touch_init.c
src/main/ha/: ha_client.h  ha_model.h  ha_services.h
src/main/layout/: layout_schema.h  layout_validate.c  layout_validate.h
src/main/settings/: runtime_settings.c
src/main/ui/: ui_bindings.h  ui_boot_splash.c  ui_pages.h  ui_runtime.c  ui_runtime.h  ui_widget_factory.c  ui_widget_factory.h
src/main/ui/fonts/: mditop50icons.c  mditop50icons56.c  mditop50icons72.c  mdiweatherIcons100.c  mdiweatherIcons20.c
src/main/ui/theme/: theme_default.c  theme_default.h
src/main/ui/weather_icons/: lottie-weathericons.txt
src/main/ui/widgets/: w_button.c  w_graph.c  w_heating_tile.c  w_sensor.c  w_slider.c
src/main/util/: json_util.h
tools/: make_factory_bin.ps1  mdi_icons_top50.txt  mdi_to_lvgl_converter.py  subset_ttf.py
